--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -29,7 +29,7 @@
 @import "components/page-header";
 @import "components/page-nav";
 @import "components/experience";
-@import "components/portfolio";
+@import "components/open-source-projects";
 @import "components/publications";
 @import "components/collab-types";
 @import "components/relevant-projects";
