--- a/src/includes/links.njk
+++ b/src/includes/links.njk
@@ -1,8 +1,8 @@
 <div class="links">
 	<ul class="links__list">
-		{%- for link in links -%}
+		{%- for key, link in links -%}
 			<li class="links__item">
-				<a class="links__item-href links__item-href--{{ link.title.toLowerCase().trim() }}" href="{{ link.url }}" target="_blank" title="{{ link.title }}"></a>
+				<a class="links__item-href links__item-href--{{ key }}" href="{{ link.url }}" target="_blank" title="{{ link.title }}"></a>
 			</li>
 		{%- endfor -%}
 	</ul>
